@@ -1,4 +1,5 @@
 -----2.9.0 -----
+	* Allow to copy&paste single objects in the project explorer
 	* Support Mathieu functions via GSL
 	* Added global settings for numbers
 	* Support real scientific notation and improve other notations of axes label
